# plether-frontend

./: .dockerignore  .gitignore  API.md  APIERRORS.md  CLAUDE.md  README.md  SPECS.md  index.html  package-lock.json  package.json  vite.config.ts
.beads/: issues.jsonl
.github/workflows/: db-manage.yml  deploy-backend.yml  deploy-frontend.yml  storybook.yml  test.yml
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  plether-api.cabal  schema.sql
apps/backend/app/: Main.hs
apps/backend/config/: addresses.mainnet.json  addresses.sepolia.json
apps/backend/src/Plether/: Api.hs  Config.hs  Indexer.hs
apps/backend/src/Plether/Database/: Schema.hs
apps/backend/src/Plether/Ethereum/: Abi.hs
apps/backend/src/Plether/Ethereum/Contracts/: ERC20.hs  LeverageRouter.hs  SyntheticSplitter.hs  ZapRouter.hs
apps/backend/src/Plether/Handlers/: History.hs  Protocol.hs  Quote.hs  User.hs
apps/backend/src/Plether/Indexer/: Contracts.hs  Events.hs
apps/backend/src/Plether/Types/: Error.hs  History.hs  User.hs
apps/backend/src/Plether/Utils/: Address.hs
apps/backend/test/: Spec.hs
apps/backend/test/Plether/Indexer/: ContractsSpec.hs  EventsSpec.hs
apps/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/public/: _headers  _worker.js
apps/frontend/src/: main.tsx
apps/frontend/src/api/: client.ts  hooks.ts
apps/frontend/src/components/: ConnectWalletPrompt.tsx  LeverageCard.tsx  MainTabNav.tsx  PriceDisplay.tsx  SlippageSelector.tsx  StakingCard.tsx  TradeCard.tsx  TransactionRow.tsx  YieldCard.tsx
apps/frontend/src/components/layout/: ApiErrorBanner.tsx  Header.tsx  Layout.tsx  index.ts
apps/frontend/src/components/ui/: Button.tsx  Tabs.tsx
apps/frontend/src/components/wallet/: ConnectButton.tsx
apps/frontend/src/config/: wagmi.ts
apps/frontend/src/contracts/: addresses.mainnet.json  addresses.sepolia.json  addresses.ts
apps/frontend/src/hooks/: useLending.ts  useLeverage.ts
apps/frontend/src/pages/: Dashboard.tsx  Mint.tsx
apps/frontend/src/services/: transactionManager.ts
apps/frontend/src/services/__tests__/: transactionManager.test.ts
apps/frontend/src/stories/: TransactionRow.stories.tsx  YieldCard.stories.tsx
apps/frontend/src/types/: index.ts
apps/frontend/src/utils/: errors.ts  history.ts
apps/frontend/src/utils/__tests__/: errors.test.ts  history.test.ts
backend/: .gitignore  cabal.project  plether-api.cabal
backend/app/: Main.hs
backend/config/: addresses.mainnet.json  addresses.sepolia.json
backend/src/Plether/: Api.hs  Cache.hs  Types.hs
backend/src/Plether/Ethereum/: Client.hs  Multicall.hs
backend/src/Plether/Ethereum/Contracts/: BasketOracle.hs  CurvePool.hs  Morpho.hs  StakedToken.hs
backend/src/Plether/Handlers/: Protocol.hs  User.hs
backend/src/Plether/Types/: Api.hs  Error.hs  Protocol.hs  Quote.hs
backend/src/Plether/Utils/: Numeric.hs
e2e/fixtures/: mockWallet.ts  wallet.ts
e2e/tests/: smoke.spec.ts  trading.spec.ts
infra/terraform/: alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  security.tf  ssm.tf  terraform.tfvars.example  variables.tf  vpc.tf
scripts/: lint-hook.sh
specs/: api-migration-guide.md  backend-api.md
src/: App.tsx  index.css  main.tsx
src/api/: client.ts  hooks.ts  index.ts  types.ts
src/components/: AdjustPositionModal.tsx  ConnectWalletPrompt.tsx  LeverageCard.tsx  MainTabNav.tsx  PendingTxBadge.tsx  PositionCard.tsx  PositionsSection.tsx  PriceDisplay.tsx  SlippageSelector.tsx  StakingCard.tsx  TokenInput.tsx  TradeCard.tsx  TransactionModal.tsx  TransactionNotifications.tsx  TransactionRow.tsx  YieldCard.tsx
src/components/layout/: Header.tsx  Layout.tsx  MobileNav.tsx  index.ts
src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  LoadingScreen.tsx  Modal.tsx  Skeleton.tsx  Spinner.tsx  Tabs.tsx  Toast.tsx  TokenIcon.tsx  Tooltip.tsx  index.ts
src/components/wallet/: ConnectButton.tsx  NetworkSwitcher.tsx
src/config/: constants.ts  wagmi.ts
src/contracts/: addresses.mainnet.json  addresses.sepolia.json  addresses.ts
src/contracts/abis/: BasketOracle.ts  CurvePool.ts  ERC20.ts  LeverageRouter.ts  Morpho.ts  MorphoIrm.ts  PlethCore.ts  StakedToken.ts  ZapRouter.ts  index.ts
src/hooks/: index.ts  useApprovalFlow.ts  useApprove.ts  useLending.ts  useLeverage.ts  useMintFlow.ts  useMorphoApy.ts  usePlethCore.ts  useStaking.ts  useTokenPrices.ts  useTrading.ts  useTransactionModal.ts  useTransactionSequence.ts
src/hooks/__tests__/: useApprove.test.ts  useLending.test.ts  useLeverage.test.ts  useMint.test.ts  usePlethCore.integration.test.tsx  usePlethCore.unit.test.tsx  useStaking.test.ts  useTrading.integration.test.tsx  useTrading.test.ts  useZapSwap.test.ts
src/pages/: Dashboard.tsx  History.tsx  Lend.tsx  Leverage.tsx  Mint.tsx  Positions.tsx  Stake.tsx  Trade.tsx  index.ts
src/services/: transactionManager.ts
src/stores/: settingsStore.ts  transactionStore.ts
src/stores/__tests__/: settingsStore.test.ts
src/stories/: AdjustPositionModal.stories.tsx  Alert.stories.tsx  Badge.stories.tsx  Card.stories.tsx  ConnectButton.stories.tsx  ConnectWalletPrompt.stories.tsx  Header.stories.tsx  LeverageCard.stories.tsx  LoadingScreen.stories.tsx  MainTabNav.stories.tsx  MobileNav.stories.tsx  Modal.stories.tsx  NetworkSwitcher.stories.tsx  PendingTxBadge.stories.tsx  PortfolioCard.stories.tsx  PositionCard.stories.tsx  PriceDisplay.stories.tsx  Skeleton.stories.tsx  SlippageSelector.stories.tsx  Spinner.stories.tsx  StakingCard.stories.tsx  Tabs.stories.tsx  TokenInput.stories.tsx  TradeCard.stories.tsx  TransactionModal.stories.tsx  TransactionRow.stories.tsx  YieldCard.stories.tsx
src/test/: anvil.ts  wagmi.ts  wrapper.tsx
src/types/: index.ts
src/utils/: errors.ts  explorer.ts  formatters.ts  mint.ts
src/utils/__tests__/: errors.test.ts  formatters.test.ts  mint.test.ts
